# controlOS

./: .gitignore  .gitmodules  CMakeLists.txt  Channel.hpp  ChannelChangenotify.hpp  ChannelClientCncHaas.hpp  ChannelClientHaasMnet.hpp  ChannelFifo.hpp  ChannelFile.hpp  ChannelLog.hpp  ChannelManager.hpp  ChannelMessageQueue.hpp  ChannelServerWebsocket.hpp  ChannelShell.hpp  ChannelState.hpp  ChannelWebsocket.hpp  Connection.cpp  Connection.h  LICENSE  Log.hpp  MCCOM.LIB  Makefile  Manager.hpp  Message.cpp  Message.h  Message.hpp  Service.cpp  Service.h  Socket.cpp  Socket.h  amcs.h  app  build  export.map  git-af  mccom.cpp  ptxdist  selected_toolchain  stxmccom.cpp  stxmcws.cpp
boot/: update
boot/base/configs/: ptxconfig
boot/base/configs/platform-x86/: platformconfig
boot/configs/: kernelconfig-common.in  ptxconfig  ptxconfig.diff
boot/configs/platform-atom/: barebox.config  kernelconfig  platformconfig
boot/configs/platform-atom/barebox-defaultenv/: config
boot/configs/platform-atom/rules/: image-system.make
boot/configs/platform-x86/: barebox.config  kernelconfig  kernelconfig-common.in  kernelconfig.in  platformconfig  platformconfig.diff
boot/configs/platform-x86/barebox-defaultenv/: config
boot/configs/platform-x86/projectroot/: install.board
boot/configs/platform-x86/rules/: image-install.make  image-system.make
boot/projectroot/: boot  init  init.inc  install
boot/projectroot/etc/: fstab  inittab
boot/projectroot/etc/init.d/: rcS
boot/projectroot/etc/install/: E407@iEi
boot/rules/: barebox.make  efibootmgr.make  efivar.in  efivar.make  image-install.make  system.make
code/gui/locale/base/: de.mjs
code/gui/studio/: __init__.py
code/shared/: setup.py
code/shared/app/: __init__.py  app.py  simio.py
configs/: ptxconfig
configs/i586/: platformconfig
examples/html/: client.html
images/: mc-image  system  update  vbox-createhd
initramfs/: selected_toolchain
initramfs/configs/: ptxconfig
initramfs/configs/platform-x86/: platformconfig
initramfs/projectroot/: init
keys/: connect  send-app  send-file  send-gui  send-mc  send-python-shared  send-setup  send-update  ssh-keygen.sh
mcbasic/: STXMCCOM.LIB  STXMCWS.LIB
mccom/: .gitignore  .gitmodules  build  selected_platformconfig
mccom/configs/: ptxconfig
mccom/configs/i586/: platformconfig
mccom/configs/i686/: platformconfig
mccom/configs/iMX6/: platformconfig
mccom/local_src/mccom/: CMakeLists.txt  Channel.hpp  ChannelLog.hpp  ChannelNotify.hpp  ChannelState.hpp  ChannelWebsocket.hpp  Log.hpp  MCCOM.LIB  Manager.hpp  Message.hpp  amcs.h  export.map  mccom.cpp
mccom/rules/: boost.make  mccom.in  mccom.make
office/: __main__.py  extlog.html  extlog.py  office  office.html  state.py
ptxdist/: Containerfile  config
root/: build
root/base/configs/: kernelconfig-common.in  kernelconfig.sh  ptxconfig  ptxconfig.diff
root/base/configs/platform-x86/: kernelconfig  platformconfig  platformconfig.diff
root/base/initramfs/configs/: ptxconfig  ptxconfig.diff
root/base/patches/cryptography-40.0.1/: series  set-python-include-from-evn.patch  symlink-to-Cargo.lock.patch
root/base/projectroot/etc/: cog.conf
root/base/rules/: app.make  codesys.make  etherlab-ethercat.make  gui-ace.make  gui-bootstrap.make  gui-jquery.in  gui-jquery.make  gui-threejs.make  gui.in  gui.make  openimc.in  openimc.make  python-shared.make  python3-cryptography.make  python3-pycparser.make  system.make
root/configs/: kernelconfig.sh  ptxconfig
root/configs/platform-atom/: kernelconfig  platformconfig
root/configs/platform-x86/: kernelconfig  kernelconfig-common.in  kernelconfig.in  platformconfig
root/local_src/arduino/: common.h  syswlan.h
root/local_src/python-shared/shared/: backup.py  condition.py  conf.py  issue.py  log.py  network.py  setup.py  smtp.py  sqlite.py  system.py  utils.py  websocket.py
root/projectroot/: version-id
root/projectroot/boot/: boot.conf
root/projectroot/etc/: fstab  group  machine-id  passwd  wpa_supplicant.conf
root/projectroot/etc/rc.once.d/: machine-id  openssh
root/projectroot/etc/ssh/: ssh_config  sshd_config
root/projectroot/etc/systemd/: journald.conf
root/projectroot/root/: .profile
root/rules/: app.make  debug.in  debug.make  glib.make  gui.make  openssh.make  os-release.make  python-shared.make  python3-pytz.in  python3-pytz.make  python3-tornado.make  stx-mc.make  system.make  systemd.in  systemd.make  usbip.in  usbip.make  version.make
rules/: boost.make  mccom.make  stxmccom.in  stxmccom.make  stxmcws.in  stxmcws.make  websocketpp.in  websocketpp.make
softMC/: selected_ptxconfig
tools/: ptxdist-copy.sh  ptxdist-install.sh  svg2vue.py
virtualbox/: create
(+224 files in other folders)
